# Project_2_Job_search

./: .gitignore  pyproject.toml
data/: vacancies.json
src/: base_api.py  base_file_handler.py  hh_api.py  json_file_handler.py  vacancy.py
